Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-5408] Compiler segfault with key path literal referring to weak property #47982

Closed
swift-ci opened this issue Jul 9, 2017 · 6 comments
Closed
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software

Comments

@swift-ci
Copy link
Collaborator

swift-ci commented Jul 9, 2017

Previous ID SR-5408
Radar rdar://problem/33215221
Original Reporter andersha (JIRA User)
Type Bug
Status Resolved
Resolution Done
Environment

Xcode 9 beta 2

Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, CompilerCrash
Assignee andersha (JIRA)
Priority Medium

md5: 0a20d81f0b3d26b38098b014f4695a9c

is duplicated by:

  • SR-5413 Observing weak properties SegFaults during compilation
  • SR-5807 Swift compiler crash when attempting to use #keyPath expression on weak reference

Issue Description:

Segfault 11, no log or stack trace is shown by Xcode.

class A {
    weak var b: AnyObject?
}

let keyPath = \A.b
print(keyPath)
@belkadan
Copy link
Contributor

@jckarter, one of the things you fixed recently?

@jckarter
Copy link
Member

@swift-ci create

@jckarter
Copy link
Member

This looks like SR-5008.

@jckarter
Copy link
Member

I take that back, the key path literal itself isn't in Any context like it was in 5008. This looks like it's due to us not handling the weak qualification.

@jckarter
Copy link
Member

PR for master: #10954
PR for 4.0: #10955

@jckarter
Copy link
Member

Merged to swift-4.0-branch as 5595cc8.

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@AnthonyLatsis AnthonyLatsis added the crash Bug: A crash, i.e., an abnormal termination of software label Dec 12, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software
Projects
None yet
Development

No branches or pull requests

4 participants