SILGen: Project the referent type of property components in key paths.

We want the semantic type of the storage, not its weak/unowned-qualified type. Fixes SR-5408 | rdar://problem/33215221.

(cherry picked from commit 624311db51fd340504ac57beb6fdcd18cb2dc066)